<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="18dp"
        android:src="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_poster_detail"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_detail"
        tools:text="@string/title" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:src="@drawable/ic_baseline_favorite_border_50"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="@+id/img_poster_detail"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorite" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/desc"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <TextView
        android:id="@+id/tv_description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_desc"
        tools:text="@string/description" />


</androidx.constraintlayout.widget.ConstraintLayout>