<resources>
    <string name="app_name">Submission3JetpackPro</string>
    <string name="title_activity_detail_catalogue">Detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="desc">Description</string>
    <string name="description">description</string>
    <string name="movie">Movie</string>
    <string name="series">TV Series</string>
    <string name="share_to">\"Share to: \"</string>
    <string name="moviefav">Favorite Movie</string>
    <string name="seriesfav">Favorite TV Series</string>
    <string name="favorite_list">Favorite List</string>
</resources>